# vmail-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
ci/images/aarch64-unknown-linux-gnu/: Dockerfile  amd64.list  arm64.list
ci/images/armv7-unknown-linux-gnueabihf/: Dockerfile  armhf.list
ci/images/x86_64-unknown-linux-gnu/: Dockerfile
shell/: _vmail-cli  gen_comp.sh  vmail-cli.bash  vmail-cli.fish
src/: account.rs  alias.rs  cli.rs  cmd.rs  crypt.rs  db.rs  domain.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/cmd/: alias.rs  domain.rs  mod.rs  user.rs
src/db/: account.rs  alias.rs  database.rs  domain.rs  result.rs  schema.rs  tlspolicy.rs
src/db/migrations/2019-02-28-210537_allow_catchall/: up.sql
vmail-cli/: Cargo.toml
vmail-cli/src/: cli.rs  crypt.rs  main.rs  result.rs  utils.rs
vmail-cli/src/cmd/: alias.rs  domain.rs  user.rs
vmail-lib/: Cargo.toml
vmail-lib/migrations/2018-04-22-165901_create_vmaildb/: down.sql  up.sql
vmail-lib/migrations/2019-02-28-210537_allow_catchall/: down.sql
vmail-lib/src/: account.rs  alias.rs  database.rs  domain.rs  lib.rs  result.rs  schema.rs  tlspolicy.rs
