[package]
name = "vmail-rs"
version = "0.3.0"
authors = [ "Armin Widegreen <vmail@widegreen.net>"]
license = "ISC"
documentation = "https://github.com/awidegreen/vmail-rs"
homepage = "https://github.com/awidegreen/vmail-rs"
repository = "https://github.com/awidegreen/vmail-rs"
readme = "README.md"
description = "A CLI client for vmail"
edition = '2018'

[[bin]]
path = "src/main.rs"
name = "vmail-cli"

[features] 
default = ["mysql"]
postgres  = ["vmail-lib/postgres"]
mysql  = ["vmail-lib/mysql"]

[dependencies]
dotenv = "0.15.0"
clap = "2.33.*"
rpassword = "5.*"
vmail-lib  = { path = "vmail-lib" }
failure = "0.1.2"
failure_derive = "0.1.2"
rand = "0.5.5"
sha-crypt = { version = "0.1.0", features = ["include_simple"] }

[workspace]
members = [
  "vmail-lib",
]
