[package]
name = "vmail-rs"
version = "0.3.1"
authors = [ "Armin Widegreen <vmail@widegreen.net>"]
license = "ISC"
documentation = "https://github.com/awidegreen/vmail-rs"
homepage = "https://github.com/awidegreen/vmail-rs"
repository = "https://github.com/awidegreen/vmail-rs"
readme = "README.md"
description = "A CLI client for vmail"
edition = '2018'

[[bin]]
path = "src/main.rs"
name = "vmail-cli"

[features] 
default = ["mysql"]
mysql = ["diesel/mysql", "diesel-derive-enum/mysql"]
# Thomas Leistner's tutorial is using mysql, so this is the default database
# backend. Build with `--features postgres` for postgres support.
postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]

[dependencies]
dotenv = "0.15.0"
clap = "2.33.*"
rpassword = "5.*"
failure = "0.1"
failure_derive = "0.1"
sha-crypt = { version = "0.1.0", features = ["include_simple"] }
diesel = { version = "1.4"}
diesel-derive-enum = { version = "1.1"}
