[package]
name = "vmail-cli"
version = "0.1.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]

[dependencies]
clap = "2"
rpassword = "2"
vmail-lib  = { path = "../vmail-lib" }
failure = "0.1"
failure_derive = "0.1"
rand = "0.5"
sha-crypt = { path = "../../password-hashing/sha-crypt", features = ["include_simple"] }
