[package]
name = "vmail-cli"
version = "0.1.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]

[dependencies]
clap = "2.32.0"
rpassword = "2.0.0"
vmail-lib  = { path = "../vmail-lib" }
failure = "0.1.2"
failure_derive = "0.1.2"
rand = "0.5.5"
sha-crypt = { git = "https://github.com/awidegreen/password-hashing.git",  branch = "add_sha-crypt", features = ["include_simple"] }
