[package]
name = "vmail-lib"
version = "0.1.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["mysql"] }
diesel-derive-enum = { version = "0.4.4", features = ["mysql"] }
dotenv = "0.13.0"
failure = "0.1.2"
failure_derive = "0.1.2"
