[package]
name = "vmail-lib"
version = "0.1.1"
authors = ["Armin Widegreen <vmail@widegreen.net>"]

[features]
# Thomas Leistner's tutorial is using mysql, so this is the default database
# backend. Build with `--features postgres` for postgres support.
postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]

[dependencies]
diesel = { version = "1.3.3", features = ["mysql"]}
diesel-derive-enum = { version = "0.4.4", features = ["mysql"]}
dotenv = "0.13.0"
failure = "0.1.2"
failure_derive = "0.1.2"
