[package]
name = "vmail-lib"
version = "0.2.0"
authors = ["Armin Widegreen <vmail@widegreen.net>"]

[features]
default = ["mysql"]
mysql = ["diesel/mysql", "diesel-derive-enum/mysql"]
# Thomas Leistner's tutorial is using mysql, so this is the default database
# backend. Build with `--features postgres` for postgres support.
postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]

[dependencies]
diesel = { version = "1.3.3"}
diesel-derive-enum = { version = "0.4.4"}
dotenv = "0.13.0"
failure = "0.1.2"
failure_derive = "0.1.2"
